# storage/api-docs/api-docs.json
@@ -108,6 +108,180 @@
                 }
             }
         },
+        "/api/barang": {
+            "get": {
+                "tags": [
+                    "Barang"
+                ],
+                "summary": "Get list of barang",
+                "description": "Display a listing of the resource.",
+                "operationId": "f9b86624b1ea03a5758e8eae04bc6621",
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "Barang"
+                ],
+                "summary": "Create a new barang",
+                "description": "Store a newly created resource in storage.",
+                "operationId": "babddf8dd1e89ef20f9f701a5d0b130e",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "id_kategori",
+                                    "nama_barang",
+                                    "berat",
+                                    "dimensi"
+                                ],
+                                "properties": {
+                                    "id_kategori": {
+                                        "type": "integer"
+                                    },
+                                    "nama_barang": {
+                                        "type": "string"
+                                    },
+                                    "deskripsi": {
+                                        "type": "string"
+                                    },
+                                    "berat": {
+                                        "type": "number"
+                                    },
+                                    "dimensi": {
+                                        "type": "string"
+                                    },
+                                    "status": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            }
+        },
+        "/api/barang/{id}": {
+            "get": {
+                "tags": [
+                    "Barang"
+                ],
+                "summary": "Get a barang by ID",
+                "description": "Display the specified resource.",
+                "operationId": "57e3d556d5baa0e628ac33da7d19b222",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "Barang"
+                ],
+                "summary": "Update a barang",
+                "description": "Update the specified resource in storage.",
+                "operationId": "a8412c1cad62703ba5a3e430dc6bc5c1",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "id_kategori": {
+                                        "type": "integer"
+                                    },
+                                    "nama_barang": {
+                                        "type": "string"
+                                    },
+                                    "deskripsi": {
+                                        "type": "string"
+                                    },
+                                    "berat": {
+                                        "type": "number"
+                                    },
+                                    "dimensi": {
+                                        "type": "string"
+                                    },
+                                    "status": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "Barang"
+                ],
+                "summary": "Delete a barang",
+                "description": "Remove the specified resource from storage.",
+                "operationId": "3bb31845049c03c5405f083825d70c1b",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                }
+            }
+        },
         "/category": {
             "get": {
                 "tags": [
@@ -1369,6 +1543,10 @@
         {
             "name": "Auth",
             "description": "Auth"
+        },
+        {
+            "name": "Barang",
+            "description": "Barang"
         },
         {
             "name": "Category",
